base/app-influxdb-telegraf.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: kube-influxdb.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              name: influxdb
---
apiVersion: v1
kind: Service
metadata:
    name: influxdb
spec:
    ports:
      - name: influxdb
        port: 8086
        targetPort: 8086
    selector:
        app: influxdb-telegraf
    type: NodePort
---
# Based on https://medium.com/@nikhil.nagarajappa/installing-influxdb-in-k8s-2fe0e0647431
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb-telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb-telegraf
  serviceName: "influxdb-telegraf"
  template:
    metadata:
      labels:
        app: influxdb-telegraf
    spec:
      securityContext:
        runAsUser: 1978
        runAsGroup: 1978
        fsGroup: 1978
      containers:
      # Influxdb container
      - name: influxdb
        image: docker.io/influxdb:2.7.11
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8086
          name: influxdb
        volumeMounts:
        - name: dir
          mountPath: /var/lib/influxdb2
          subPath: influxdb
      # Telegraf MQTT container
      - name: telegraf-mqtt
        image: docker.io/telegraf:1.33.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
          name: telegraf-mqtt
        volumeMounts:
        - name: dir
          mountPath: /etc/telegraf
          subPath: telegraf-mqtt
      imagePullSecrets:
        - name: docker-hub
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
#  volumeClaimTemplates:
#  - metadata:
#      name: data
#    spec:
#      accessModes: [ "ReadWriteMany" ]
#      resources:
#        requests:
#          storage: 10Gi
#      storageClassName: nfs
#  - metadata:
#      name: influxdb
#    spec:
#      accessModes: [ "ReadWriteMany" ]
#      resources:
#        requests:
#          storage: 10Gi
#      storageClassName: 'nfs-csi'
